force-app/main/default/objects/RentProcessRule__c/RentProcessRule__c.object-meta.xml
<CustomObject>
    <label>Regola rateizzazione</label>
    <nameField>
        <displayFormat>RPR-{0000000}</displayFormat>
        <label>Codice Regola</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Regole rateizzazione</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>