force-app/main/default/objects/RentProcessRule__c/fields/AmountToPayInInstallmentsFrom__c.field-meta.xml
<CustomField>
    <fullName>AmountToPayInInstallmentsFrom__c</fullName>
    <label>Importo Piano Rate da (incluso)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>