force-app/main/default/objects/RentProcessRule__c/fields/ApplicationInterests__c.field-meta.xml
<CustomField>
    <fullName>ApplicationInterests__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Applicazione Interessi</label>
    <type>Checkbox</type>
</CustomField>