force-app/main/default/objects/RentProcessRule__c/fields/AuthorityPlan__c.field-meta.xml
<CustomField>
    <fullName>AuthorityPlan__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Piano d&apos;autorità</description>
    <label>Piano d&apos;autorità</label>
    <type>Checkbox</type>
</CustomField>