force-app/main/default/objects/RentProcessRule__c/fields/BillLeakH2O__c.field-meta.xml
<CustomField>
    <fullName>BillLeakH2O__c</fullName>
    <description>Bolletta Fuga H2O</description>
    <label>Bolletta Fuga H2O</label>
    <length>255</length>
    <type>Text</type>
</CustomField>