force-app/main/default/objects/RentProcessRule__c/fields/BillPlurimTLRTur__c.field-meta.xml
<CustomField>
    <fullName>BillPlurimTLRTur__c</fullName>
    <description>FatturaPlurim_TLR_Tur + 3,5%</description>
    <label>FatturaPlurim_TLR_Tur + 3,5%</label>
    <length>255</length>
    <type>Text</type>
</CustomField>