force-app/main/default/objects/RentProcessRule__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Categoria Cliente .</description>
    <label>Categoria Cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_CategoryTypeClient</valueSetName>
    </valueSet>
</CustomField>