force-app/main/default/objects/RentProcessRule__c/fields/EconomicsDiscomfort__c.field-meta.xml
<CustomField>
    <fullName>EconomicsDiscomfort__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disagio economico</description>
    <label>Disagio economico</label>
    <type>Checkbox</type>
</CustomField>