force-app/main/default/objects/RentProcessRule__c/fields/EvasionElusion__c.field-meta.xml
<CustomField>
    <fullName>EvasionElusion__c</fullName>
    <description>Evasione/Elusione</description>
    <label>Evasione/Elusione</label>
    <length>255</length>
    <type>Text</type>
</CustomField>