force-app/main/default/objects/RentProcessRule__c/fields/ExistingInstallmentPlanUnpaidFrom__c.field-meta.xml
<CustomField>
    <fullName>ExistingInstallmentPlanUnpaidFrom__c</fullName>
    <label>Numero Piani Rata Esistenti Da (incluso)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>