force-app/main/default/objects/RentProcessRule__c/fields/InstallmentPlanReason__c.field-meta.xml
<CustomField>
    <fullName>InstallmentPlanReason__c</fullName>
    <label>Motivo Piano Rate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assistenza Sociale</fullName>
            </value>
            <value>
                <fullName>Bolletta Fuga H2O</fullName>
            </value>
            <value>
                <fullName>Calamità Naturali</fullName>
            </value>
            <value>
                <fullName>Delibera 655 2016</fullName>
            </value>
            <value>
                <fullName>Disagio Economico</fullName>
            </value>
            <value>
                <fullName>Disagio Economico (Bonus Sociale)</fullName>
            </value>
            <value>
                <fullName>Disguido Hera</fullName>
            </value>
            <value>
                <fullName>Disoccupato/Cassintegrato</fullName>
            </value>
            <value>
                <fullName>Doc. ricevuto dopo scadenza</fullName>
            </value>
            <value>
                <fullName>Evasione/Elusione</fullName>
            </value>
            <value>
                <fullName>FatturaPlurim_EE (noD1)_GAS</fullName>
            </value>
            <value>
                <fullName>FatturaPlurim_EE SME ML</fullName>
            </value>
            <value>
                <fullName>FatturaPlurim_Gas&gt;5000</fullName>
            </value>
            <value>
                <fullName>Fattura Plurim_TLR_Tur + 3.5%</fullName>
            </value>
            <value>
                <fullName>Fattura SD</fullName>
            </value>
            <value>
                <fullName>Fatturazione bloccata plurim</fullName>
            </value>
            <value>
                <fullName>Malfunzione Gruppo di misura</fullName>
            </value>
            <value>
                <fullName>Piano d&apos;autorità</fullName>
            </value>
            <value>
                <fullName>TARI</fullName>
            </value>
            <value>
                <fullName>TCP Comune no Int</fullName>
            </value>
            <value>
                <fullName>Piano Straordinario</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>