force-app/main/default/objects/RentProcessRule__c/fields/MandatoryAttachments__c.field-meta.xml
<CustomField>
    <fullName>MandatoryAttachments__c</fullName>
    <label>Descrizione Prodotto</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>