force-app/main/default/objects/RentProcessRule__c/fields/SocialAssistance__c.field-meta.xml
<CustomField>
    <fullName>SocialAssistance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assistenza sociale</label>
    <type>Checkbox</type>
</CustomField>