force-app/main/default/objects/RentProcessRule__c/fields/TypeInstallmentPlan__c.field-meta.xml
<CustomField>
    <fullName>TypeInstallmentPlan__c</fullName>
    <label>Tipo Piano Rateizzazione</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Autorità</fullName>
            </value>
            <value>
                <fullName>Personalizzato</fullName>
            </value>
            <value>
                <fullName>Solo Piano Mensile</fullName>
            </value>
            <value>
                <fullName>Straordinario</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>