force-app/main/default/objects/RentProcessRule__c/fields/WorkStatus__c.field-meta.xml
<CustomField>
    <fullName>WorkStatus__c</fullName>
    <label>Lavori Eseguiti/Lavori in Corso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eseguito</fullName>
            </value>
            <value>
                <fullName>In Corso</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>