force-app/main/default/objects/RentProcessRule__c/listViews/HDT_RentProcessRule.listView-meta.xml
<ListView>
    <fullName>HDT_RentProcessRule</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>TypeInstallmentPlan__c</columns>
    <columns>ApplicationInterests__c</columns>
    <columns>InstallmentPlanReason__c</columns>
    <columns>CAWithOrWithoutSEPA__c</columns>
    <columns>ExistingInstallmentPlanUnpaidFrom__c</columns>
    <columns>ExistingInstallmentPlanUnpaidTo__c</columns>
    <columns>SuspensionInPastTwelveMonths__c</columns>
    <columns>AmountToPayInInstallmentsFrom__c</columns>
    <columns>AmountToPayInInstallmentsTo__c</columns>
    <columns>Deposit__c</columns>
    <columns>MaxInstallmentsNumber__c</columns>
    <columns>ApprovalProcess__c</columns>
    <columns>AttachmentManagement__c</columns>
    <filterScope>Everything</filterScope>
    <label>Regole Piano Rata</label>
</ListView>